# Three-Dided-Sngle-Model

./: README.md
Fsa_Headpose_Project/: .gitignore  README.md  pyproject.toml  requirements.txt
Fsa_Headpose_Project/src/fsa_headpose/: api_server.py  config.py  draw.py  main.py  math_utils.py  pose.py  smoother.py
Fsa_Headpose_Project/src/fsa_headpose.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
